Update index.html for better styling
I made some changes to the html for the styles to behave as desired.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="style.css">
     <title>Awesome!</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
                 <button class="signup hero">Sign up</button>
             </div>
             <div class="hero-right">
-                <img src="" alt="This is a dummy picture for a dummy website.">
+                <img src="resources/img/main_lee-campbell-DtDlVpy-vvQ-unsplash.jpg" alt="This is a dummy picture for a dummy website.">
             </div>
         </div>
     </div>
@@ -33,19 +33,19 @@
         <h2>Some random information</h2>
         <div class="cards">
             <div class="pair">
-                <img src="" alt="" class="card">
+                <img src="resources/img/c1_lee-campbell-YuIMhzOKofY-unsplash.jpg" alt="card one alt" class="card">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="pair">
-                <img src="" alt="" class="card">
+                <img src="resources/img/c2_lee-campbell-Pmw_LMwmOdU-unsplash.jpg" alt="card two alt" class="card">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="pair">
-                <img src="" alt="" class="card">
+                <img src="resources/img/c3_lee-campbell-FOH_CcYm7q0-unsplash.jpg" alt="card three alt" class="card">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="pair">
-                <img src="" alt="" class="card">
+                <img src="resources/img/c4_lee-campbell-GkP4fd5EzWk-unsplash.jpg" alt="card four alt" class="card">
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
@@ -54,13 +54,17 @@
         <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
         <p>-Thor, God of Thunder</p>
     </div>
-    <div class="banner">
-        <div class="banner-left">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
+    <div class="banner-container">
+        <div class="banner">
+            <div class="banner-left">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="banner-right">
+                <button class="signup banner">Sign up</button>
+            </div>
         </div>
-        <button class="signup banner">Sign up</button>
-    </div>
+    </div>  
     <footer>
         <p>Copyright &copy; The Odin Project 2021</p>
     </footer>
